syntax = "proto3";
package pb;

import "google/api/annotations.proto";
import "messages.proto";

service YourService {
    rpc Echo(StringMessage) returns (StringMessage) {
        option (google.api.http) = {
            post: "/v1/example/echo"
            body: "*"
        };
    }

    rpc Ping(PingMessage) returns (PongMessage) {
        option (google.api.http) = {
            get: "/v1/example/ping"
        };
    }

    rpc EchoServerStream(StringMessage) returns (stream StringMessage) {
        option (google.api.http) = {
            post: "/v1/server/stream/example/echo"
            body: "*"
        };
    }

    rpc EchoClientStream(stream StringMessage) returns (StringMessage) {
        option (google.api.http) = {
            post: "/v1/client/stream/example/echo"
            body: "*"
        };
    }

    rpc EchoBiDiStream(stream StringMessage) returns (stream StringMessage) {
        option (google.api.http) = {
            post: "/v1/bidi/stream/example/echo"
            body: "*"
        };
    }
}
